--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
-
+<div class="jumbotron">
 <h1>Welcome to Fitomite</h1>
-<p>Sign up <%= link_to "here", "#" %>.</p>
+<p>Click here to <%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg" %>.</p>
+</div>
