--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,1 +1,7 @@
+
+$body-bg:     #bdc3c7;
+$navbar-default-bg:    #d35400;
+$navbar-default-link-color: #2c3e50;
+$brand-primary: #bdc3c7;
+$jumbotron-bg: #ecf0f1;
 @import 'bootstrap';
