--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,8 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "home", root_path%></li>
         <li><%= link_to "about", about_path%></li>
-            
+        <li><%= link_to "team", team_path%></li>
+
           </ul>
         </li>
       </ul>
