--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,15 +1,17 @@
 <div class="jumbotron">
-<h1>Welcome to Fitomite</h1>
-<p>Click here to <%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg" %>.</p>
+<center>
+  <h1>My Fitomite</h1>
+</center>
+<center><p>Click here to <%= link_to "Customize More", "#", class: "btn btn-primary btn-lg" %></p></center>
 </div>
 <div class="row">
   <div class="col-sm-7 col-md-6">
     <div class="thumbnail">
       <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSawMvyuQcGCvu3DNr-QURTjLhFEMv4arMwtUYWXFly062COUlQ" alt="...">
       <div class="caption">
-        <h3>Progress</h3>
+        <center><h3>Progress</h3>
         <p>My Fitomite Log</p>
-        <p><a href="#" class="btn btn-default" role="button">Button</a></p>
+        <p><a href="#" class="btn btn-default" role="button">See My Progress</a></p><center>
       </div>
     </div>
 </div>
@@ -17,9 +19,9 @@
     <div class="thumbnail">
       <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSawMvyuQcGCvu3DNr-QURTjLhFEMv4arMwtUYWXFly062COUlQ" alt="...">
       <div class="caption">
-        <h3>Nutrition</h3>
+        <center><h3>Nutrition</h3>
         <p>My Diet Plan</p>
-        <p><a href="#" class="btn btn-default" role="button">Button</a></p>
+        <p><a href="#" class="btn btn-default" role="button">See My Nutrition</a></p></center>
       </div>
     </div>
   </div>
@@ -29,9 +31,9 @@
     <div class="thumbnail">
       <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSawMvyuQcGCvu3DNr-QURTjLhFEMv4arMwtUYWXFly062COUlQ" alt="...">
       <div class="caption">
-        <h3>Workouts</h3>
+        <center><h3>Workouts</h3>
         <p>My Customized Pland and Workout Guides</p>
-        <p><a href="#" class="btn btn-default" role="button">Button</a></p>
+        <p><a href="#" class="btn btn-default" role="button">See My Workouts</a></p></center>
       </div>
     </div>
 </div>
@@ -39,9 +41,9 @@
     <div class="thumbnail">
       <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSawMvyuQcGCvu3DNr-QURTjLhFEMv4arMwtUYWXFly062COUlQ" alt="...">
       <div class="caption">
-        <h3>Content</h3>
+        <center><h3>Content</h3>
         <p>Articles and Videos to Help My Journey</p>
-        <p><a href="#" class="btn btn-default" role="button">Button</a></p>
+        <p><a href="#" class="btn btn-default" role="button">See My Content</a></p></center>
       </div>
     </div>
   </div>
