--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron">
 <center>
-  <h1>My Fitomite</h1>
+  <h1>My Fitomite Command Center</h1>
 </center>
 <center><p>Click here to <%= link_to "Customize More", "#", class: "btn btn-primary btn-lg" %></p></center>
 </div>
@@ -10,7 +10,7 @@
       <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSawMvyuQcGCvu3DNr-QURTjLhFEMv4arMwtUYWXFly062COUlQ" alt="...">
       <div class="caption">
         <center><h3>Progress</h3>
-        <p>My Fitomite Log</p>
+        <p>My Fitomite Reports</p>
         <p><a href="#" class="btn btn-default" role="button">See My Progress</a></p><center>
       </div>
     </div>
