--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,6 +19,11 @@
         <li><%= link_to "home", root_path%></li>
         <li><%= link_to "about", about_path%></li>
         <li><%= link_to "team", team_path%></li>
+        <% if user_signed_in? %>
+         <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
+         <% else %>
+          <li><%= link_to "Sign In", new_user_session_path %></li>
+          <% end %>
 
           </ul>
         </li>
