--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,6 +3,7 @@
   <h1>My Fitomite Command Center</h1>
 </center>
 <center><p>Click here to <%= link_to "Customize More", "#", class: "btn btn-primary btn-lg" %></p></center>
+<center><%= link_to "sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %></center>
 </div>
 <div class="row">
   <div class="col-sm-7 col-md-6">
