added progress, workouts, nutrition and content pages and links within site

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,7 @@
       <div class="caption">
         <center><h3>Progress</h3>
         <p>My Fitomite Reports</p>
-        <p><a href="#" class="btn btn-default" role="button">See My Progress</a></p><center>
+        <p><a href="progress" class="btn btn-default" role="button">See My Progress</a></p><center>
       </div>
     </div>
 </div>
@@ -21,8 +21,8 @@
       <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSawMvyuQcGCvu3DNr-QURTjLhFEMv4arMwtUYWXFly062COUlQ" alt="...">
       <div class="caption">
         <center><h3>Nutrition</h3>
-        <p>My Diet Plan</p>
-        <p><a href="#" class="btn btn-default" role="button">See My Nutrition</a></p></center>
+        <p>My Diet Plan and Recipes</p>
+        <p><a href="nutrition" class="btn btn-default" role="button">See My Nutrition</a></p></center>
       </div>
     </div>
   </div>
@@ -33,8 +33,8 @@
       <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSawMvyuQcGCvu3DNr-QURTjLhFEMv4arMwtUYWXFly062COUlQ" alt="...">
       <div class="caption">
         <center><h3>Workouts</h3>
-        <p>My Customized Pland and Workout Guides</p>
-        <p><a href="#" class="btn btn-default" role="button">See My Workouts</a></p></center>
+        <p>My Customized Plans and Exercises</p>
+        <p><a href="workouts" class="btn btn-default" role="button">See My Workouts</a></p></center>
       </div>
     </div>
 </div>
@@ -44,8 +44,9 @@
       <div class="caption">
         <center><h3>Content</h3>
         <p>Articles and Videos to Help My Journey</p>
-        <p><a href="#" class="btn btn-default" role="button">See My Content</a></p></center>
+        <p><a href="content" class="btn btn-default" role="button">See My Content</a></p></center>
       </div>
     </div>
   </div>
 </div>
+
