--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,6 +19,10 @@
         <li><%= link_to "home", root_path%></li>
         <li><%= link_to "about", about_path%></li>
         <li><%= link_to "team", team_path%></li>
+        <li><%= link_to "progress", progress_path%></li>
+        <li><%= link_to "workouts", workouts_path%></li>
+        <li><%= link_to "nutrition", nutrition_path%></li>
+        <li><%= link_to "content", content_path%></li>
         <% if user_signed_in? %>
          <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
          <% else %>
