added content and started wireframes for Progress log

--- a/app/views/pages/progress.html.erb
+++ b/app/views/pages/progress.html.erb
@@ -1,2 +1,77 @@
-<h1>your mom</h2>
+<div class="jumbotron">
+	<center>
+		<h1>My Fitomite Progress Log</h1>
+	</center>
+</div>
+
+<div class ="row">
+	<h5>Start Date: _______</h5>
+	<h5>Current Date: ______</h5>
+	<h5>Time Elapsed: ______</h5>
+</div>
+<div class ="row">
+	<h5>Starting Weight: _______</h5>
+	<h5>Current Weight: _______<h5>
+	<h5>Weight Lost: _____</h5>
+	<h5>Percent of Body Weight Lost: ______</h5>
+	<div class="col-sm-7 col-md-6">
+    <div class="thumbnail">
+      <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSawMvyuQcGCvu3DNr-QURTjLhFEMv4arMwtUYWXFly062COUlQ" alt="...">
+      <div class="caption">
+        <center><h3>Body Weight Tracking Chart</h3>
+        <p>This Tracks Your Weight Lost</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+	<h5>Starting Estimated BMI: _______</h5>
+	<h5>Current Estimated BMI: _______</h5>
+	<h5>Percent change: ______</h5>
+	<div class="col-sm-7 col-md-6">
+    <div class="thumbnail">
+      <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSawMvyuQcGCvu3DNr-QURTjLhFEMv4arMwtUYWXFly062COUlQ" alt="...">
+      <div class="caption">
+        <center><h3>BMI Tracking Chart</h3>
+        <p>This Tracks Your BMI</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class ="row">
+	<h5>Starting Estimated Body Fat Percentage: _______</h5>
+	<h5>Current Estimated Body Fat Percentage: ______</h5>
+	<h5>Change: ______%</h5>
+	<h5>Estimated Lbs of Body Fat Lost: ______</h5>
+	<div class="col-sm-7 col-md-6">
+    <div class="thumbnail">
+      <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSawMvyuQcGCvu3DNr-QURTjLhFEMv4arMwtUYWXFly062COUlQ" alt="...">
+      <div class="caption">
+        <center><h3>Body Fat Tracking Chart</h3>
+        <p>This Tracks Your Fat Loss</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class ="row">
+	<h5>Diet Type: _______</h5>
+	<h5>Recommended Calories Per Day: _______</h5>
+	<h5>Actual Calories Per Day: _______</h5>
+	<h5>I've followed my plan _______% of the time</h5>
+	<div class="col-sm-7 col-md-6">
+    <div class="thumbnail">
+      <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSawMvyuQcGCvu3DNr-QURTjLhFEMv4arMwtUYWXFly062COUlQ" alt="...">
+      <div class="caption">
+        <center><h3>Calorie Tracking Chart</h3>
+        <p>This Tracks How Much You Eat</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
 	
