added details to progress pages

--- a/app/views/pages/content.html.erb
+++ b/app/views/pages/content.html.erb
@@ -1,1 +1,7 @@
-<h1>content</h1>
+<h1>Content</h1>
+
+<h3>This will be a library of content, sortable by author, keyword and so forth</h3>
+
+<h5>Motivation and Memes</h5>
+<h5>Articles</h5>
+<h5>Videos</h5>
