--- a/app/views/pages/nutrition.html.erb
+++ b/app/views/pages/nutrition.html.erb
@@ -1,1 +1,14 @@
-<h1>nutrition</h1>
+<h1>Nutrition</h1>
+
+<h3>My Diet Guidelines</h3>
+
+<h5>Total daily calories: _______</h5>
+<h5>Total daily carbs: _______ grams</h5>
+<h5>Total daily fats: _______ grams</h5>
+<h5>Total daily protein: _______ grams</h5>
+
+<h3>Recipes that follow my diet</h3>
+<h5>Breakfast</h5>
+<h5>Lunch</h5>
+<h5>Dinner</h5>
+<h5>Snacks and Dessert</h5>
