--- a/app/views/pages/workouts.html.erb
+++ b/app/views/pages/workouts.html.erb
@@ -1,1 +1,7 @@
-<h1>workouts</h1>
+<h1>Workouts</h1>
+<h3>Workout plan length: ____days</h3>
+<h3>Completed _____days. ______%</h3>
+<h3>Today's workout</h3>
+<h5>^This will be a hyperlink to their plan</h5>
+<h3>Exercises in my workout plan</h3>
+<h3>Exercise Library</h3>
