--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">StacysMom</a>
+      <a class="navbar-brand" href="#">Fitomite</a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -17,8 +17,6 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "home", root_path%></li>
-        <li><%= link_to "about", about_path%></li>
-        <li><%= link_to "team", team_path%></li>
         <li><%= link_to "progress", progress_path%></li>
         <li><%= link_to "workouts", workouts_path%></li>
         <li><%= link_to "nutrition", nutrition_path%></li>
